src/objects/Apttus_Config2__ClassificationHierarchy__c.object
<CustomObject>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Code_Full_Hierarchy__c</fullName>
        <inlineHelpText>Local Product Hierarchy Code</inlineHelpText>
        <label>Code Full Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Code__c</fullName>
        <inlineHelpText>Category Level 4 Name</inlineHelpText>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>